--- a/shout/www/index.html
+++ b/shout/www/index.html
@@ -16,18 +16,27 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
+    <!-- // <script src="cordova.js"></script> -->
 
     <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
+    <script src="app/shout.module.js"></script>
+    <script src="app/shout.config.js"></script>
+    <script src="app/shout.run.js"></script>
+    <script src="app/login/login.module.js"></script>
+    <script src="app/login/login.controller.js"></script>
+    <script src="app/inbox/inbox.module.js"></script>
+    <script src="app/inbox/inbox.controller.js"></script>
+
+
+
+
+
   </head>
-  <body ng-app="starter">
+  <body ng-app="shout">
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar view-title='index' class="bar-stable">
       <ion-nav-back-button>
       </ion-nav-back-button>
     </ion-nav-bar>
