continue shelling client

--- a/shout/www/app/settings/tab-settings.html
+++ b/shout/www/app/settings/tab-settings.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Inbox">
+<ion-view view-title="Settings">
 	<ion-content class="padding">
 		<div class="list card">
 		</div>
