continue shell of client

--- a/shout/www/index.html
+++ b/shout/www/index.html
@@ -26,6 +26,10 @@
     <script src="app/login/login.controller.js"></script>
     <script src="app/inbox/inbox.module.js"></script>
     <script src="app/inbox/inbox.controller.js"></script>
+    <script src="app/settings/settings.module.js"></script>
+    <script src="app/settings/settings.controller.js"></script>
+    <script src="app/camera/camera.module.js"></script>
+    <script src="app/camera/camera.controller.js"></script>
 
 
 
