and album and signup shells

--- a/shout/www/index.html
+++ b/shout/www/index.html
@@ -22,14 +22,20 @@
     <script src="app/shout.module.js"></script>
     <script src="app/shout.config.js"></script>
     <script src="app/shout.run.js"></script>
+
     <script src="app/login/login.module.js"></script>
     <script src="app/login/login.controller.js"></script>
+    <script src="app/login/signup.module.js"></script>
+    <script src="app/login/signup.controller.js"></script>
+
     <script src="app/inbox/inbox.module.js"></script>
     <script src="app/inbox/inbox.controller.js"></script>
     <script src="app/settings/settings.module.js"></script>
     <script src="app/settings/settings.controller.js"></script>
     <script src="app/camera/camera.module.js"></script>
     <script src="app/camera/camera.controller.js"></script>
+    <script src="app/album/album.module.js"></script>
+    <script src="app/album/album.controller.js"></script>
 
 
 
