--- a/shout/www/app/login/signup.html
+++ b/shout/www/app/login/signup.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Login"> 
+<ion-view view-title="Sign Up"> 
 	<ion-content class="padding">
 		<div class="list list-inset">
 		   <label class="item item-input">
@@ -11,8 +11,7 @@
 		       <input type="password" placeholder="Password" ng-model="data.password">
 		   </label>
 		</div>
-		<button class="button button-block button-calm" ng-click="login()">Login</button>
-		<button class="button button-block button-calm" ui-sref="signup">Sign Up</button>
+		<button class="button button-block button-calm" ng-click="login()">Sign Up</button>
 	</ion-content>
 
 </ion-view>
