add basic tests to client

--- a/shout/www/app/settings/tab-settings.html
+++ b/shout/www/app/settings/tab-settings.html
@@ -2,5 +2,6 @@
 	<ion-content class="padding">
 		<div class="list card">
 		</div>
+		<button class="button button-block button-calm" ng-click="acceptSettings()">OK</button>
 	</ion-content>
 </ion-view>
