--- a/shout/www/index.html
+++ b/shout/www/index.html
@@ -30,12 +30,17 @@
 
     <script src="app/inbox/inbox.module.js"></script>
     <script src="app/inbox/inbox.controller.js"></script>
+    <script src="app/inbox/inbox.factory.js"></script>
+
     <script src="app/settings/settings.module.js"></script>
     <script src="app/settings/settings.controller.js"></script>
     <script src="app/camera/camera.module.js"></script>
     <script src="app/camera/camera.controller.js"></script>
+
     <script src="app/album/album.module.js"></script>
     <script src="app/album/album.controller.js"></script>
+    <script src="app/album/album.factory.js"></script>
+
 
 
 
