begin add user geolocation functionality and tests

--- a/shout/www/index.html
+++ b/shout/www/index.html
@@ -16,7 +16,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
-    <!-- // <script src="cordova.js"></script> -->
+    <script src="cordova.js"></script>
 
     <!-- your app's js -->
     <script src="app/shout.module.js"></script>
@@ -40,6 +40,9 @@
     <script src="app/album/album.module.js"></script>
     <script src="app/album/album.controller.js"></script>
     <script src="app/album/album.factory.js"></script>
+
+    <script src="app/location/location.module.js"></script>
+    <script src="app/location/location.factory.js"></script>    
 
 
 
