Login UI, Camera, code cleanup

--- a/shout/www/app/inbox/tab-inbox.html
+++ b/shout/www/app/inbox/tab-inbox.html
@@ -1,6 +1,8 @@
 <ion-view view-title="Inbox">
-	<ion-content class="padding">
-		<div class="list card">
-		</div>
-	</ion-content>
+  <ion-content class="padding">
+    <div class="list card">
+    </div>
+    <!-- Camera Button-->
+    <button class="button button-block" ng-click="vm.takePicture()">Camera</button>
+  </ion-content>
 </ion-view>
