add dist/shout.js as source, remove all others

--- a/shout/www/index.html
+++ b/shout/www/index.html
@@ -17,40 +17,14 @@
   <!-- cordova script (this will be a 404 during development) -->
   <script src="cordova.js"></script>
 
-  <!-- your app's js -->
-  <script src="app/shout.module.js"></script>
-  <script src="app/shout.config.js"></script>
-  <script src="app/shout.run.js"></script>
-
-  <script src="app/login/login.module.js"></script>
-  <script src="app/login/login.controller.js"></script>
-  <script src="app/login/signup.module.js"></script>
-  <script src="app/login/signup.controller.js"></script>
-
-  <script src="app/inbox/inbox.module.js"></script>
-  <script src="app/inbox/inbox.controller.js"></script>
-  <script src="app/inbox/inbox.factory.js"></script>
-
-  <script src="app/settings/settings.module.js"></script>
-  <script src="app/settings/settings.controller.js"></script>
-
-  <script src="app/camera/camera.module.js"></script>
-  <!--<script src="app/camera/camera.controller.js"></script>-->
-  <script src="app/camera/camera.services.js"></script>
-
-  <script src="app/album/album.module.js"></script>
-  <script src="app/album/album.controller.js"></script>
-  <script src="app/album/album.factory.js"></script>
-
-  <script src="app/location/location.module.js"></script>
-  <script src="app/location/location.factory.js"></script>
+  <!-- source js -->
+  <script src="dist/shout.js"></script>
 
 </head>
 
 <body ng-app="shout">
-  <!--
-      The nav bar that will be updated as we navigate between views.
-    -->
+  
+  <!-- The nav bar that will be updated as we navigate between views. -->
   <ion-nav-bar view-title='index' class="bar-stable">
     <ion-nav-back-button>
     </ion-nav-back-button>
