--- a/shout/www/app/review/tab-review.html
+++ b/shout/www/app/review/tab-review.html
@@ -1,8 +1,8 @@
-<ion-view view-title="Inbox">
+<ion-view view-title="Review">
   <ion-content class="padding">
     <div class="list card">
     </div>
     <!-- Camera Button-->
-    <button class="button button-block" ng-click="inbox.takePicture()">Camera</button>
+    <button class="button button-block" ng-click="vm.takePicture()">Camera</button>
   </ion-content>
 </ion-view>
