add redirect to review, after takePicture. incomplete

--- a/shout/www/app/inbox/tab-inbox.html
+++ b/shout/www/app/inbox/tab-inbox.html
@@ -3,6 +3,6 @@
     <div class="list card">
     </div>
     <!-- Camera Button-->
-    <button class="button button-block" ng-click="inbox.takePicture()">Camera</button>
+    <button class="button button-block" ng-click="vm.takePicture()">Camera</button>
   </ion-content>
 </ion-view>
