--- a/shout/www/app/settings/tab-settings.html
+++ b/shout/www/app/settings/tab-settings.html
@@ -1,7 +1,38 @@
 <ion-view view-title="Settings">
   <ion-content class="padding">
-    <div class="list card">
-    </div>
+    <ul class="list">
+      <li>
+        <div class="item item-toggle">
+           Watch my Location
+           <label class="toggle toggle-calm">
+             <input type="checkbox" 
+                    ng-model="radius"
+                    ng-change="userSetWatch()"
+                    >
+             <div class="track">
+               <div class="handle"></div>
+             </div>
+           </label>
+        </div> 
+      </li>
+
+      <li>
+        <div class="item range">
+          Broadcast Radius
+          <input type="range" name="radius" min="0" max="100" value="33">
+          <i class="icon ion-ios-world-outline"></i>
+        </div>
+      </li>  
+
+      <li>
+        <div class="item range">
+          Image Lifetime
+          <input type="range" name="ttl" min="0" max="100" value="33">
+          <i class="icon ion-ios-stopwatch-outline"></i>
+        </div>
+      </li>  
+    </ul>
     <button class="button button-block button-calm" ng-click="acceptSettings()">OK</button>
   </ion-content>
 </ion-view>
+
