create UI for settings view with toggle and sliders

--- a/shout/www/app/settings/tab-settings.html
+++ b/shout/www/app/settings/tab-settings.html
@@ -6,8 +6,8 @@
            Watch my Location
            <label class="toggle toggle-calm">
              <input type="checkbox" 
-                    ng-model="radius"
-                    ng-change="userSetWatch()"
+                    ng-model="vm.watch"
+                    ng-change="vm.userSetWatch()"
                     >
              <div class="track">
                <div class="handle"></div>
@@ -18,21 +18,36 @@
 
       <li>
         <div class="item range">
-          Broadcast Radius
-          <input type="range" name="radius" min="0" max="100" value="33">
+          Broadcast Radius </br><div class="item">
+          {{vm.radius}} miles</div>
+
+          <input type="range" 
+                 ng-model="vm.radius"
+                 min="5" 
+                 step="5"
+                 max="100" 
+                 value="{{vm.radius}}"
+                 ng-init="5"
+                 >
           <i class="icon ion-ios-world-outline"></i>
         </div>
       </li>  
 
       <li>
         <div class="item range">
-          Image Lifetime
-          <input type="range" name="ttl" min="0" max="100" value="33">
+          Image Lifetime  </br><div class="item">{{vm.TTL}} min</div>
+          <input type="range" 
+                 ng-model="vm.TTL"
+                 min="5" 
+                 max="20" 
+                 value="{{vm.TTL}}"
+                 ng-init="5"
+                 >
           <i class="icon ion-ios-stopwatch-outline"></i>
         </div>
       </li>  
     </ul>
-    <button class="button button-block button-calm" ng-click="acceptSettings()">OK</button>
+    <button class="button button-block button-calm" ng-click="vm.acceptSettings()">Accept Settings</button>
   </ion-content>
 </ion-view>
 
