Add more responsive design
fix input area issues with position/sizing. center picture preview on
review page.

--- a/shout/www/app/login/login.html
+++ b/shout/www/app/login/login.html
@@ -5,15 +5,9 @@
     </div>
     <div class="loginInputContainer">
       <div class="loginInputBox">
-        <div class="loginInputItem">
-          <input type="text" placeholder="Username" ng-model="data.username">
-        </div>
-        <div class="loginInputItem">
-          <input type="email" placeholder="Email" ng-model="data.email">
-        </div>
-        <div class="loginInputItem">
-          <input type="password" placeholder="Password" ng-model="data.password">
-        </div>
+        <input class="loginInputItem" type="text" placeholder="Username" ng-model="data.username">
+        <input class="loginInputItem" type="email" placeholder="Email" ng-model="data.email">
+        <input class="loginInputItem" type="password" placeholder="Password" ng-model="data.password">
       </div>
     </div>
     <div class="loginButtonContainer">
