--- a/shout/www/app/inbox/tab-inbox.html
+++ b/shout/www/app/inbox/tab-inbox.html
@@ -1,11 +1,12 @@
 <ion-view view-title="Inbox">
   <ion-content class="padding">
+  <ion-refresher on-refresh="vm.doRefresh()"></ion-refresher>
   <ion-list>
     <ion-item ng-repeat="photo in vm.photos track by $index">
       <img ng-src="{{photo.src}}" />
       <p>{{photo.number}}</p>
     </ion-item>
-    <ion-infinite-scroll on-infinite="vm.addPhotos()"></ion-infinite-scroll>
+    <ion-infinite-scroll on-infinite="vm.addPhotos()" ></ion-infinite-scroll>
   </ion-list>
   </ion-content>
 </ion-view>
