--- a/shout/www/index.html
+++ b/shout/www/index.html
@@ -10,6 +10,8 @@
   <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
+  <script src="lib/underscore/underscore-min.js"></script>
+
 
   <!-- ionic/angularjs js -->
   <script src="lib/ionic/js/ionic.bundle.js"></script>
