--- a/shout/www/app/inbox/tab-inbox.html
+++ b/shout/www/app/inbox/tab-inbox.html
@@ -6,7 +6,7 @@
       <img ng-src="{{photo.src}}" />
       <p>{{photo.number}}</p>
     </ion-item>
-    <ion-infinite-scroll on-infinite="vm.addPhotos()" ></ion-infinite-scroll>
+    <ion-infinite-scroll infinite-scroll-disabled="vm.canScroll" on-infinite="vm.loadMore()" ></ion-infinite-scroll>
   </ion-list>
   </ion-content>
 </ion-view>
