--- a/shout/www/app/login/signup.html
+++ b/shout/www/app/login/signup.html
@@ -2,16 +2,16 @@
   <ion-content class="padding">
     <div class="list list-inset">
       <label class="item item-input">
-        <input type="text" placeholder="Username" ng-model="data.username">
+        <input type="text" placeholder="Username" ng-model="vm.data.username">
       </label>
       <label class="item item-input">
-        <input type="email" placeholder="Email" ng-model="data.email">
+        <input type="email" placeholder="Email" ng-model="vm.data.email">
       </label>
       <label class="item item-input">
-        <input type="password" placeholder="Password" ng-model="data.password">
+        <input type="password" placeholder="Password" ng-model="vm.data.password">
       </label>
     </div>
-    <button class="button button-block button-calm" ng-click="login()">Sign Up</button>
+    <button class="button button-block button-calm" ng-click="vm.signup()">Sign Up</button>
   </ion-content>
 
 </ion-view>
