--- a/shout/www/app/inbox/tab-inbox.html
+++ b/shout/www/app/inbox/tab-inbox.html
@@ -1,10 +1,13 @@
 <ion-view view-title="Inbox">
   <ion-content class="padding">
   <ion-refresher on-refresh="vm.doRefresh()"></ion-refresher>
-  <ion-list>
-    <ion-item ng-repeat="photo in vm.photos track by $index">
+  <ion-list can-swipe="true">
+    <ion-item ng-repeat="photo in vm.photos track by $index" >
+      <ion-option-button class="button-light icon ion-ios-trash" ></ion-option-button>
+      <ion-option-button class="button-light icon ion-ios-book" ></ion-option-button>
+      <ion-option-button class="button-light icon ion-ios-world" ng-click="vm.reBroadcast($index)"></ion-option-button>
       <img ng-src="{{photo.src}}" />
-      <p>{{photo.number}}</p>
+      <p>{{photo.photoId}}</p>
     </ion-item>
     <ion-infinite-scroll infinite-scroll-disabled="vm.canScroll" on-infinite="vm.loadMore()" ></ion-infinite-scroll>
   </ion-list>
