--- a/shout/www/index.html
+++ b/shout/www/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
   <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
   <link href="lib/ionic/css/ionic.css" rel="stylesheet">
@@ -14,16 +15,22 @@
   <script src="lib/underscore/underscore-min.js"></script>
 
 
+  <script src="lib/jquery/dist/jquery.js"></script>
+
   <!-- ionic/angularjs js -->
   <script src="lib/ionic/js/ionic.bundle.js"></script>
+  <script src="lib/angular-cookies/angular-cookies.js"></script>
+  <script src="lib/angular-sanitize/angular-sanitize.js"></script>
+  <script src="lib/ng-file-upload/angular-file-upload.js"></script>
+
+  <!-- third party js -->
+  <script src="lib/xml2json.js"></script>
 
   <!-- cordova script (this will be a 404 during development) -->
   <script src="cordova.js"></script>
 
   <!-- source js -->
   <script src="dist/shout.js"></script>
-
-
 </head>
 
 <body ng-app="shout">
