add s3Upload feature, client and server side

--- a/shout/www/index.html
+++ b/shout/www/index.html
@@ -16,6 +16,12 @@
 
   <!-- ionic/angularjs js -->
   <script src="lib/ionic/js/ionic.bundle.js"></script>
+  <script src="lib/angular-cookies/angular-cookies.js"></script>
+  <script src="lib/angular-sanitize/angular-sanitize.js"></script>
+  <script src="lib/ng-file-upload/angular-file-upload.js"></script>
+
+  <!-- third party js -->
+  <script src="xml2json.js"></script>
 
   <!-- cordova script (this will be a 404 during development) -->
   <script src="cordova.js"></script>
