--- a/shout/www/app/settings/tab-settings.html
+++ b/shout/www/app/settings/tab-settings.html
@@ -48,6 +48,8 @@
       </li>  
     </ul>
     <button class="button button-block button-calm" ng-click="vm.acceptSettings()">Accept Settings</button>
+    <button class="button button-block button-calm" ng-click="vm.sharePhoto()">Share Photo</button>
+    <input id="photos" type="file">
   </ion-content>
 </ion-view>
 
