--- a/shout/www/app/inbox/tab-inbox.html
+++ b/shout/www/app/inbox/tab-inbox.html
@@ -6,8 +6,7 @@
       <ion-option-button class="button-light icon ion-ios-trash" ></ion-option-button>
       <ion-option-button class="button-light icon ion-ios-book" ng-click="vm.saveToAlbum($index)"></ion-option-button>
       <ion-option-button class="button-light icon ion-ios-world" ng-click="vm.reBroadcast($index)"></ion-option-button>
-      <img ng-src="{{photo.src}}" />
-      <p>{{photo.photoId}}</p>
+       <img class="inboxPhoto" ng-src="{{vm.getSrc(photo.photoId)}}"/>
     </ion-item>
     <ion-infinite-scroll infinite-scroll-disabled="vm.canScroll" on-infinite="vm.loadMore()" ></ion-infinite-scroll>
   </ion-list>
