--- a/shout/www/app/settings/tab-settings.html
+++ b/shout/www/app/settings/tab-settings.html
@@ -1,41 +1,49 @@
 <ion-view view-title="Settings">
   <ion-content class="padding">
     <ul class="list">
-      <li>
-        <div class="item item-toggle">
-          Watch my Location
-          <label class="toggle toggle-calm">
-            <input type="checkbox" ng-model="vm.watch" ng-change="vm.userSetWatch()">
-            <div class="track">
-              <div class="handle"></div>
-            </div>
-          </label>
-        </div>
-      </li>
+
+      <div class="flex row">
+        <div class="col-10"></div>
+        <li class="col">
+          <div class="item item-checkbox-right checkbox-positive">
+            Enable</br> 
+            <label class="checkbox">
+              <input type="checkbox" ng-model="vm.watch" ng-change="vm.userSetWatch()">
+            </label>
+          </div>
+        </li>
+
+        <div class="col"></div>
+        <li class="col">
+          <div class="item item-checkbox-right checkbox-positive">
+            Trickle</br> 
+            <label class="checkbox">
+              <input type="checkbox" ng-model="vm.trickle" ng-change="vm.userSetWatch()">
+            </label>
+          </div>
+        </li>
+        <div class="col-10"></div>
+      </div>
 
       <li>
-        <div class="item range">
-          Broadcast Radius</br>
-          <div class="item">
-            {{vm.radius}} miles</div>
-
-          <input type="range" ng-model="vm.radius" min="5" step="5" max="100" value="{{vm.radius}}"
-          ng-init="5">
+        <div class="item range range-positive">
+          {{vm.radius | number:1}} miles</br>
+          <input type="range" name="radius" ng-model="vm.radius" min="0.1" step="0.1" max="5" value="{{vm.radius}}">
           <i class="icon ion-ios-world-outline"></i>
         </div>
       </li>
 
       <li>
-        <div class="item range">
-          Image Lifetime</br>
-          <div class="item">{{vm.TTL}} min</div>
-          <input type="range" ng-model="vm.TTL" min="5" max="20" value="{{vm.TTL}}" ng-init="5">
+        <div class="item range range-positive">
+          {{vm.TTL | number:1}} min </br>
+          <input type="range" ng-model="vm.TTL" min="0.5" step="0.5" max="5" ng-init="5" value="{{vm.TTL}}">
           <i class="icon ion-ios-stopwatch-outline"></i>
         </div>
       </li>
+
     </ul>
-    <button class="button button-block button-calm" ng-click="vm.acceptSettings()">Accept Settings</button>
-    <button class="button button-block button-calm" ng-click="vm.sharePhoto()">Share Photo</button>
-    <input id="photos" type="file">
+    <button class="button button-block button-positive" ng-click="vm.acceptSettings()">Save Settings</button>
+    <button class="button button-block button-positive" ng-click="vm.logOut()">Log Out</button>
+    <input  ng-hide="true" id="photos" type="file">
   </ion-content>
 </ion-view>
