add fb and google buttons.  redo entire design

--- a/shout/www/app/login/login.html
+++ b/shout/www/app/login/login.html
@@ -1,3 +1,45 @@
+<ion-view class="loginScreen" hide-nav-bar="true" view-title="Login" align-title="left">
+<!--<ion-content style="background: url(img/ripple.jpeg) center; background-size: cover;">-->
+  <ion-content>
+    <div class="row">
+      <div class="col">
+        <div class="loginTitle">RIPPLE</div>
+      </div>
+    </div>
+    <div class="padding">
+      <ion-md-input class="loginItem" placeholder="Name" hightlight-color="positive" type="text" value="{{vm.username}}"></ion-md-input>
+      <ion-md-input class="loginItem" placeholder="Email" hightlight-color="positive" type="email" value="{{vm.email}}"></ion-md-input>
+      <ion-md-input class="loginItem" placeholder="Password" hightlight-color="positive" type="password" value="{{vm.password}}"></ion-md-input>
+    </div>
+    <div class="padding">
+      <button ng-click="vm.login()" class="button button-block button-positive flat ink ">Login</button>
+    </div>
+    <div class="padding row">
+      <div class="col">
+      </div>
+      <div class="col">
+        <div class="flex">
+          <button ng-click="vm.login()" class="button button-positive-900 button-fab ink">
+            <i class="icon ion-social-facebook"></i>
+          </button>
+        </div>
+      </div>
+      <div class="col">
+      </div>
+      <div class="col">
+        <div class="flex">
+          <button ng-click="vm.login()" class="button button-assertive button-fab ink">
+            <i class="icon ion-social-google"></i>
+          </button>
+        </div>
+      </div>
+      <div class="col">
+      </div>
+    </div>
+  </ion-content>
+</ion-view>
+
+<!--
 <ion-view class="loginView">
   <ion-content class="padding">
     <div class="loginTitleContainer">
@@ -21,3 +63,4 @@
     </div>
   </ion-content>
 </ion-view>
+-->
