working google map

--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="./styles/styles.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
+  <script src="http://maps.googleapis.com/maps/api/js"></script>
 </head>
 <body>
   <div id="dashboard"></div>
