--- a/shout/www/index.html
+++ b/shout/www/index.html
@@ -8,7 +8,7 @@
 
   <link href="lib/ionic/css/ionic.css" rel="stylesheet">
   <link href="lib/ionic-material/dist/ionic.material.min.css" rel="stylesheet">
-  <link href="lib/ion-md-input/css/ion-md-input.css" rel="stylesheet">
+  <link href="css/ion-md-input.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 
   <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
