--- a/shout/www/app/login/login.html
+++ b/shout/www/app/login/login.html
@@ -17,7 +17,9 @@
     <div class="padding">
       <button ng-click="vm.login()" class="button button-block button-positive flat ink ">Login</button>
     <div class="flex">
-      <a class="signuplink" href="#/signup">Not a user? Sign up</a>
+      <div>
+        <a class="signuplink" href="#/signup">Not a user? Sign up</a>
+      </div>
     </div>
     </div>
     <div class="padding row">
