--- a/shout/www/app/login/signup.html
+++ b/shout/www/app/login/signup.html
@@ -7,9 +7,9 @@
       </div>
     </div>
     <div class="padding">
-      <ion-md-input class="loginItem" placeholder="Name" hightlight-color="positive" type="text" value="{{vm.username}}"></ion-md-input>
-      <ion-md-input class="loginItem" placeholder="Email" hightlight-color="positive" type="email" value="{{vm.email}}"></ion-md-input>
-      <ion-md-input class="loginItem" placeholder="Password" hightlight-color="positive" type="password" value="{{vm.password}}"></ion-md-input>
+      <ion-md-input class="loginItem" placeholder="Name" hightlight-color="positive" type="text" ng-model="vm.data.username" value="{{vm.data.username}}"></ion-md-input>
+      <ion-md-input class="loginItem" placeholder="Email" hightlight-color="positive" type="email" ng-model="vm.data.email" value="{{vm.data.email}}"></ion-md-input>
+      <ion-md-input class="loginItem" placeholder="Password" hightlight-color="positive" type="password" ng-model="vm.data.password" value="{{vm.data.password}}"></ion-md-input>
     </div>
     <div class="padding">
       <button ng-click="vm.signup()" class="button button-block button-positive flat ink ">Sign Up</button>
