--- a/shout/www/index.html
+++ b/shout/www/index.html
@@ -20,6 +20,7 @@
   <script src="lib/ionic-material/dist/ionic.material.min.js"></script>
   <script src="lib/ion-md-input/js/ion-md-input.min.js"></script>
 
+  <script src="lib/ng-cordova/ng-cordova.min.js"></script>
   <!-- cordova script (this will be a 404 during development) -->
   <script src="cordova.js"></script>
 
