--- a/shout/www/app/inbox/tab-inbox.html
+++ b/shout/www/app/inbox/tab-inbox.html
@@ -1,8 +1,67 @@
 <ion-view view-title="Inbox">
   <ion-content class="padding">
     <ion-refresher on-refresh="vm.doRefresh()"></ion-refresher>
-    <ion-list class="condensed-space no-padding animate-blinds" can-swipe="true">
-      <ion-item class="card dark-bg" ng-repeat="photo in vm.photos track by $index">
+    <ion-list class="condensed-space no-padding" can-swipe="true">
+      <ion-item class="card no-padding">
+        <ion-option-button class="button-light icon ion-ios-trash"></ion-option-button>
+        <ion-option-button class="button-light icon ion-ios-book" ng-click="vm.saveToAlbum($index)"></ion-option-button>
+        <ion-option-button class="button-light icon ion-ios-world" ng-click="vm.reBroadcast($index)"></ion-option-button>
+        <a class="item clear-bg item-bg-image waves-effect waves-button waves-light has-mask-reverse">
+          <h2>Title</h2>
+          <p>Broadcasts: 2</p>
+          <!--<img class="inboxPhoto" ng-src="{{vm.getSrc(photo.photoId)}}">-->
+          <img class="inboxPhoto" ng-src="img/ripple.jpeg">
+        </a>
+      </ion-item>
+      <ion-item class="xcard no-padding">
+        <ion-option-button class="button-light icon ion-ios-trash"></ion-option-button>
+        <ion-option-button class="button-light icon ion-ios-book" ng-click="vm.saveToAlbum($index)"></ion-option-button>
+        <ion-option-button class="button-light icon ion-ios-world" ng-click="vm.reBroadcast($index)"></ion-option-button>
+        <a class="item clear-bg item-bg-image waves-effect waves-button waves-light has-mask-reverse">
+          <h2>Title</h2>
+          <p>Broadcasts: 2</p>
+          <!--<img class="inboxPhoto" ng-src="{{vm.getSrc(photo.photoId)}}">-->
+          <img class="inboxPhoto" ng-src="img/ripple.jpeg">
+        </a>
+      </ion-item>
+      <ion-item class="xcard no-padding">
+        <ion-option-button class="button-light icon ion-ios-trash"></ion-option-button>
+        <ion-option-button class="button-light icon ion-ios-book" ng-click="vm.saveToAlbum($index)"></ion-option-button>
+        <ion-option-button class="button-light icon ion-ios-world" ng-click="vm.reBroadcast($index)"></ion-option-button>
+        <a class="item clear-bg item-bg-image waves-effect waves-button waves-light has-mask-reverse">
+          <h2>Title</h2>
+          <p>Broadcasts: 2</p>
+          <!--<img class="inboxPhoto" ng-src="{{vm.getSrc(photo.photoId)}}">-->
+          <img class="inboxPhoto" ng-src="img/ripple.jpeg">
+        </a>
+      </ion-item>
+      <ion-item class="xcard">
+        <ion-option-button class="button-light icon ion-ios-trash"></ion-option-button>
+        <ion-option-button class="button-light icon ion-ios-book" ng-click="vm.saveToAlbum($index)"></ion-option-button>
+        <ion-option-button class="button-light icon ion-ios-world" ng-click="vm.reBroadcast($index)"></ion-option-button>
+        <a class="item clear-bg item-bg-image waves-effect waves-button waves-light has-mask-reverse">
+          <h2>Title</h2>
+          <p>Broadcasts: 2</p>
+          <!--<img class="inboxPhoto" ng-src="{{vm.getSrc(photo.photoId)}}">-->
+          <img class="inboxPhoto" ng-src="img/ripple.jpeg">
+        </a>
+      </ion-item>
+      <ion-item class="xcard">
+        <ion-option-button class="button-light icon ion-ios-trash"></ion-option-button>
+        <ion-option-button class="button-light icon ion-ios-book" ng-click="vm.saveToAlbum($index)"></ion-option-button>
+        <ion-option-button class="button-light icon ion-ios-world" ng-click="vm.reBroadcast($index)"></ion-option-button>
+        <a class="item clear-bg item-bg-image waves-effect waves-button waves-light has-mask-reverse">
+          <h2>Title</h2>
+          <p>Broadcasts: 2</p>
+          <!--<img class="inboxPhoto" ng-src="{{vm.getSrc(photo.photoId)}}">-->
+          <img class="inboxPhoto" ng-src="img/ripple.jpeg">
+        </a>
+      </ion-item>
+      <ion-infinite-scroll infinite-scroll-disabled="vm.canScroll" on-infinite="vm.loadMore()"></ion-infinite-scroll>
+    </ion-list>
+    <!--
+    <ion-list can-swipe="true">
+      <ion-item ng-repeat="photo in vm.photos track by $index">
         <ion-option-button class="button-light icon ion-ios-trash"></ion-option-button>
         <ion-option-button class="button-light icon ion-ios-book" ng-click="vm.saveToAlbum($index)"></ion-option-button>
         <ion-option-button class="button-light icon ion-ios-world" ng-click="vm.reBroadcast($index)"></ion-option-button>
@@ -14,5 +73,6 @@
       </ion-item>
       <ion-infinite-scroll infinite-scroll-disabled="vm.canScroll" on-infinite="vm.loadMore()"></ion-infinite-scroll>
     </ion-list>
+    -->
   </ion-content>
 </ion-view>
