--- a/shout/www/app/album/tab-album.html
+++ b/shout/www/app/album/tab-album.html
@@ -4,7 +4,7 @@
   <ion-list can-swipe="true">
     <ion-item class="photoDisplay" ng-repeat="photo in vm.photos track by $index" >
     <ion-list class="photoDisplay condensed-space no-padding" ng-repeat="photo in vm.photos track by $index" can-swipe="true">
-      <ion-option-button class="button-light icon ion-ios-trash" ></ion-option-button>
+      <ion-option-button class="button-light icon ion-ios-trash" ng-click="vm.deleteFromAlbum($index)" ></ion-option-button>
         <a class="item clear-bg item-bg-image waves-effect waves-button waves-light has-mask-reverse">
           <!--
           <h2>{{vm.getSrc(photo.Title)}}</h2>
