large refactor of code to make more stable.
Made good use of the user module to control the source of truth for
data.  moved functions to factories when appropriate.  added event
listeners to factories, removed localstorage accesses.

--- a/shout/www/app/album/tab-album.html
+++ b/shout/www/app/album/tab-album.html
@@ -4,7 +4,7 @@
     <ion-list class="condensed-space no-padding" can-swipe="true">
       <ion-item collection-repeat="photo in vm.album track by $index" item-height="20%" item-width="80%">
         <ion-option-button class="button-light icon ion-ios-trash" ng-click="vm.deleteFromAlbum($index)"></ion-option-button>
-        <img ng-src="{{vm.getSrc(photo.photoId)}}">
+        <img ng-src="{{vm.url(photo.photoId)}}">
       </ion-item>
     </ion-list>
   </ion-content>
