add spacing, review: add stuff

--- a/shout/www/app/review/tab-review.html
+++ b/shout/www/app/review/tab-review.html
@@ -3,9 +3,9 @@
       <h2>{{vm.title}}</h2>
     <div class="list card">
       <div class="item item-image">
-        <!-- <img src={{vm.photo}}> -->
+        <img src={{vm.photo}}>
         <!-- <img src="img/berkeley.jpg"> -->
-        <img src="https://s3-us-west-1.amazonaws.com/ripple-photos/s3Upload/11768851433485645053.jpeg">
+        <!-- <img src="https://s3&#45;us&#45;west&#45;1.amazonaws.com/ripple&#45;photos/s3Upload/11768851433485645053.jpeg"> -->
       </div>
       <label class="item item-input">
         <input type="text" placeholder="Title" ng-model="vm.title">
