Refactored for facebook login

--- a/shout/www/app/login/login.html
+++ b/shout/www/app/login/login.html
@@ -28,7 +28,7 @@
       </div>
       <div class="col">
         <div class="flex">
-          <button ng-click="vm.login()" class="button button-positive-900 button-fab ink">
+          <button ng-click="vm.fbLogin()" class="button button-positive-900 button-fab ink">
             <i class="icon ion-social-facebook"></i>
           </button>
         </div>
