--- a/shout/www/app/login/signup.html
+++ b/shout/www/app/login/signup.html
@@ -19,7 +19,7 @@
       </div>
       <div class="col">
         <div class="flex">
-          <button ng-click="vm.signup()" class="button button-positive-900 button-fab ink">
+          <button ng-click="vm.fbLogin()" class="button button-positive-900 button-fab ink">
             <i class="icon ion-social-facebook"></i>
           </button>
         </div>
