--- a/shout/www/index.html
+++ b/shout/www/index.html
@@ -20,7 +20,7 @@
   <script src="lib/ionic-material/dist/ionic.material.min.js"></script>
   <script src="lib/ion-md-input/js/ion-md-input.min.js"></script>
 
-  <script src="lib/ng-cordova/ng-cordova.min.js"></script>
+  <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
   <!-- cordova script (this will be a 404 during development) -->
   <script src="cordova.js"></script>
 
@@ -35,17 +35,15 @@
 <body ng-app="shout">
 
   <!-- The nav bar that will be updated as we navigate between views. -->
-  <!--
-  <ion-nav-bar view-title="index" class="bar-positive">
-=======
-  <ion-nav-bar view-title="index" class="bar-stable">
-    <ion-nav-back-button>
-    </ion-nav-back-button>
->>>>>>> Allows app to run in ionic view
-  </ion-nav-bar>
-  -->
-  <ion-nav-view></ion-nav-view>
-
+  
+    <ion-nav-bar class="bar-positive">
+    </ion-nav-bar>
+      <ion-nav-view>
+        <ion-nav-back-button>
+        </ion-nav-back-button>
+      </ion-nav-view>
+     
+  
   <!--
       The views will be rendered in the <ion-nav-view> directive below
       Templates are in the /templates folder (but you could also
