--- a/shout/www/app/broadcast/tab-broadcast.html
+++ b/shout/www/app/broadcast/tab-broadcast.html
@@ -8,7 +8,7 @@
           <div class="item item-checkbox-right checkbox-positive">
             Enable</br> 
             <label class="checkbox">
-              <input type="checkbox" ng-model="vm.watch" ng-change="vm.userSetWatch()">
+              <input type="checkbox" ng-model="vm.settings.enabled" ng-change="vm.toggleEnable()">
             </label>
           </div>
         </li>
@@ -18,7 +18,7 @@
           <div class="item item-checkbox-right checkbox-positive">
             Trickle</br> 
             <label class="checkbox">
-              <input type="checkbox" ng-model="vm.trickle" ng-change="vm.userSetWatch()">
+              <input type="checkbox" ng-model="vm.settings.trickle">
             </label>
           </div>
         </li>
@@ -27,16 +27,16 @@
 
       <li>
         <div class="item range range-positive">
-          {{vm.radius | number:1}} miles</br>
-          <input type="range" name="radius" ng-model="vm.radius" min="0.1" step="0.1" max="5" value="{{vm.radius}}">
+          {{vm.settings.radius | number:1}} miles</br>
+          <input type="range" name="radius" ng-model="vm.settings.radius" min="0.1" step="0.1" max="5" value="{{vm.settings.radius}}">
           <i class="icon ion-ios-world-outline"></i>
         </div>
       </li>
 
       <li>
         <div class="item range range-positive">
-          {{vm.TTL | number:1}} min </br>
-          <input type="range" ng-model="vm.TTL" min="0.5" step="0.5" max="5" ng-init="5" value="{{vm.TTL}}">
+          {{vm.settings.TTL | number:1}} min </br>
+          <input type="range" ng-model="vm.settings.TTL" min="0.5" step="0.5" max="5" ng-init="5" value="{{vm.settings.TTL}}">
           <i class="icon ion-ios-stopwatch-outline"></i>
         </div>
       </li>
