--- a/shout/www/app/settings/tab-settings.html
+++ b/shout/www/app/settings/tab-settings.html
@@ -5,7 +5,7 @@
       <ion-item class="item item-toggle item-divider">
         Enable</br>
         <label class="toggle toggle-positive">
-          <input type="checkbox" ng-model="vm.watch" ng-change="vm.userSetWatch()">
+          <input type="checkbox" ng-model="vm.settings.enabled" ng-change="vm.toggleEnable()">
           <div class="track">
             <div class="handle"></div>
           </div>
@@ -15,7 +15,7 @@
       <ion-item class="item item-toggle item-divider">
         Trickle</br>
           <label class="toggle toggle-positive">
-            <input type="checkbox" ng-model="vm.trickle" ng-change="vm.setTrickle()">
+            <input type="checkbox" ng-model="vm.settings.trickle" ng-change="vm.setTrickle()">
           <div class="track">
             <div class="handle"></div>
           </div>
@@ -24,8 +24,8 @@
 
       <ion-item class="item item-range item-divider no-padding">
         <label class="range range-positive">
-          {{vm.radius | number:1}} mi&nbsp&nbsp</br>
-          <input type="range" name="radius" ng-model="vm.radius" min="0.1" step="0.1" max="5"
+          {{vm.settings.radius | number:1}} mi&nbsp&nbsp</br>
+          <input type="range" name="radius" ng-model="vm.settings.radius" min="0.1" step="0.1" max="5"
           value="{{vm.radius}}">
           <i class="icon ion-ios-world-outline"></i>
         <div class="track">
@@ -36,8 +36,8 @@
 
       <ion-item class="item item-range item-divider no-padding">
         <label class="range range-positive">
-          {{vm.TTL | number:1}} min</br>
-          <input type="range" ng-model="vm.TTL" min="0.5" step="0.5" max="5" ng-init="5"
+          {{vm.settings.TTL | number:1}} min</br>
+          <input type="range" ng-model="vm.settings.TTL" min="0.5" step="0.5" max="5" ng-init="5"
           value="{{vm.TTL}}">
           <i class="icon ion-ios-stopwatch-outline"></i>
         <div class="track">
@@ -49,7 +49,7 @@
       <ion-item class="item-divider">
       </ion-item>
       <ion-item class="">
-        <button class="button button-block button-positive" ng-click="vm.acceptSettings()">Save Settings</button>
+        <button class="button button-block button-positive" ng-click="vm.saveSettings()">Save Settings</button>
       </ion-item>
       <ion-item class="">
         <button class="button button-block button-positive" ng-click="vm.logOut()">Log Out</button>
